fix(footer): legal links not centered

--- a/app/components/Footer/Footer.scss
+++ b/app/components/Footer/Footer.scss
@@ -93,10 +93,6 @@
       margin-bottom: 0;
     }
   }
-
-  &.isLegalInformation {
-    max-width: 186px;
-  }
 }
 
 .listHeadline {
